# fun-with-elliptic-curves

./: CLAUDE.md  README.md  pyproject.toml
src/: secp256k1.py  small_field_analysis.py
tests/: test_secp256k1.py
